# durableflow

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  competitive-differentiation-and-space-map.md  dataflow-spec.md  durable-flow-overview.md  golden.md  prune-proposal.md  pyproject.toml  start.sh  worker.py
agent/: __init__.py  adk_adapter.py  mcp_client.py  mini_react.py  protocol.py  runner.py  tools.py
bench/: planner_benchmark.py
colony/: README.md  __init__.py  baseline.py  benchmark.py  chaos.py  colony-spec.md  controller.py  cost.py  models.py  provider.py  render_terminal.py  store_ext.py  telemetry_ext.py  view_fixtures.py  views.py
context/: README.md  __init__.py  audit_view.py  cli.py  context-measurement-spec.md  context-spec.md  ledger.py  measurement.py  models.py  schema.py
data/: batch_20jobs.json  chaos_profiles.json  mock_calendar.json  mock_emails.json
docs/: README.md  aws-deployment-proposal.md  colony-methodology.md  context-extension.md  dflow-arch.md  dflow-spec.md  eval-gate-spec.md  exercises.md  field-pattern.md  langsmith-adapter.md
evals/: __init__.py  cases.py  cli.py  gate.py  io.py  manifest.py  redaction.py  registry.py  render.py  scorers.py  view.py
examples/: chaos_benchmark_demo.py  context_audit_demo.py  crash_resume_demo.py  inbox_triage_context_demo.py  inbox_triage_demo.py  mcp_demo.py  readiness_demo.py  single_eviction_demo.py
factory/: CLEAR.md  README.md  __init__.py  agent_runner.py  audit_view.py  clear-spec.md  clear_workflow.py  clear_workflow_feasibility.md  phase_state.py  phase_store.py  pi-dev.md  (+4 more)
(+110 files in other folders)
