[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "durableflow"
version = "0.1.0"
description = "Durable Flow — minimal durable runtime primitives for LLM-powered workflows."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Marcos Polanco" }]
keywords = [
    "llm",
    "agents",
    "workflow",
    "durable-execution",
    "assistant",
    "sqlite",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
providers = ["anthropic==0.69.0"]
vast = []
mcp = ["mcp==1.13.1"]
adk = ["google-adk==1.18.0"]
dev = ["pytest==8.4.2"]

[project.urls]
Homepage = "https://github.com/marcospolanco/durableflow"
Repository = "https://github.com/marcospolanco/durableflow"
Documentation = "https://github.com/marcospolanco/durableflow/blob/main/docs/README.md"
Issues = "https://github.com/marcospolanco/durableflow/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "colony*", "agent*", "readiness*", "mcp_server*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
